<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/help_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

     <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/helpactivity_appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

         <androidx.appcompat.widget.Toolbar
             android:id="@+id/helpactivity_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.AppBarOverlay">

         </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">
    <!-- TopStories Spinner -->
    <LinearLayout
        android:id="@+id/helpactivity_topstories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <TextView
            android:id="@+id/helpactivity_topstories_spinner_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="TopStories, choice only one : ( No choice is all item )"
            android:layout_margin="@dimen/margin_top"/>
        <Spinner
            android:id="@+id/helpactivity_topstories_spinner_choice"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorAccentTwo"
            android:spinnerMode="dialog"
            android:backgroundTint="@android:color/white">
        </Spinner>
    </LinearLayout>
    <!-- SharedPref remove -->
    <LinearLayout
        android:id="@+id/helpactivity_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <Switch
            android:id="@+id/helpactivity_remove_sharedpref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:checked="false"
            android:padding="8dp"
            android:text="Remove Preferences parameters"
            android:textSize="16sp"
            tools:visibility="visible" />
        <LinearLayout
            android:id="@+id/helpactivity_remove_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/helpactivity_remove_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:background="@color/cardview_shadow_end_color"
                android:text="Confirm remove : "
                android:textSize="16sp"
                android:visibility="invisible" />
            <RadioGroup
                android:id="@+id/helpactivity_remove_confirm_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible">
                <RadioButton
                    android:id="@+id/helpactivity_remove_confirm_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:checked="true"
                    android:onClick="rbclick"
                    android:text="No" />
                <RadioButton
                    android:id="@+id/helpactivity_remove_confirm_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:checked="false"
                    android:onClick="rbclick"
                    android:text="Yes" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <!-- nb ArticleViewed - spinner -->
    <LinearLayout
        android:id="@+id/helpactivity_articleviewed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="vertical">
            <TextView
                android:id="@+id/helpactivity_articlesviewed_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="History of Articles viewed, ( Default 30 )"
                android:layout_margin="@dimen/margin_top"/>
            <Spinner
                android:id="@+id/helpactivity_articlesviewed_spinner"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorAccentTwo"
                android:spinnerMode="dialog"
                android:backgroundTint="@android:color/white">
            </Spinner>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>