<resources>
    <string name="app_name">My News</string>
    <string name="tab_top_stories">TOP STORIES</string>
    <string name="tab_most_popular">MOST POPULAR</string>
    <string name="tab_business">BUSINESS</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_Notifications">Notifications</string>
    <string name="Notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="news_api_key">J0iJw0a8fdshubHztJsOJxEEg6hPstOG</string>

    <string name="app_search">Search Articles</string>

    <string-array name="spinnerListAdapter">
        <item>Home</item>
        <item>Arts</item>
        <item>Business</item>
        <item>Entrepreneurs</item>
        <item>Politics</item>
        <item>Sports</item>
        <item>Travel</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strLogin">Login :</string>
    <string name="strPwd">Password :</string>
    <string name="strtxtDescro">saisir id</string>
    <string name="strValider">Valider</string>
    <string name="title_activity_tabs_test">TabsTest</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    -->
</resources>
